--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18.1",
     "dotenv": "^2.0.0",
     "font-awesome": "^4.7.0",
+    "node-sass": "^4.14.0",
     "react": "^16.8.6",
     "react-card-flip": "^1.1.1",
     "react-dom": "^16.8.6",
