--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -17,7 +17,7 @@
     "styled-components": "^5.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3002 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -34,5 +34,5 @@
   "devDependencies": {
     "shave": "^2.5.4"
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:3003"
 }
