--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
+    "material-ui": "^0.20.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -29,6 +32,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.23",
+    "@types/material-ui": "^0.21.8",
     "@types/node": "^15.0.2",
     "@types/reach__router": "^1.3.7",
     "@types/react": "^17.0.5",
