--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -13,7 +13,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "rss-parser": "^3.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
