--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -15,6 +15,7 @@
     "react-card-flip": "^1.1.1",
     "react-dom": "^16.8.6",
     "react-pro-sidebar": "^0.6.0",
+    "react-query": "^3.16.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8"
   },
