--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.23.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-lazy-hero": "^2.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
     "styled-components": "^5.3.0"
