--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -17,7 +17,8 @@
     "react-pro-sidebar": "^0.6.0",
     "react-query": "^3.16.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-scroll": "^1.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
