--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -12,5 +12,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "nodemon": "^1.18.7"
+  },
+  "devDependencies": {
+    "pg": "^8.6.0"
   }
 }
