--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,14 @@
   "author": "garrettgsb",
   "license": "MIT",
   "scripts": {
-    "go": "nodemon server.js"
+    "go": "nodemon server.js",
+    "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4",
+    "cookie-session": "^2.0.0",
+    "express": "^4.17.2",
+    "morgan": "^1.10.0",
     "nodemon": "^1.18.7"
   }
 }
