--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^16.0.0",
     "express": "^4.16.4",
+    "knex": "^1.0.3",
     "nodemon": "^1.18.7"
   }
 }
