--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -6,13 +6,19 @@
   "author": "garrettgsb",
   "license": "MIT",
   "scripts": {
-    "go": "nodemon server.js"
+    "go": "nodemon server.js",
+    "migration:create": "knex migrate:make",
+    "seed:create": "knex seed:make",
+    "db:rollback": "knex migrate:rollback",
+    "db:seed": "knex seed:run",
+    "db:migrate": "knex migrate:latest"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
     "dotenv": "^16.0.0",
     "express": "^4.16.4",
     "knex": "^1.0.3",
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.18.7",
+    "pg": "^8.7.3"
   }
 }
