--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,10 @@
     "cookie-session": "^2.0.0",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
-    "nodemon": "^1.18.7",
     "pg": "^8.7.3"
   },
   "devDependencies": {
-    "@faker-js/faker": "*"
+    "@faker-js/faker": "*",
+    "nodemon": "^1.19.4"
   }
 }
