--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -6,7 +6,9 @@
     "axios": "^0.18.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
