--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "db:exec": "docker exec -it beleaf_database_1 psql"
   },
   "dependencies": {
-    "react-router-dom": "^6.2.1"
+    "node-sass": "^7.0.1",
+    "react-router-dom": "^6.2.1",
+    "sass": "^1.49.7",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.1"
   }
 }
