--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -7,11 +7,8 @@
   "license": "MIT",
   "scripts": {
     "go": "nodemon server.js",
-    "db:rollback": "knex migrate:rollback",
-    "migration:create": "knex migrate:make",
-    "db:migrate": "knex migrate:latest",
-    "seed:create": "knex seed:make",
-    "db:seed": "knex seed:run"
+    "start": "node server.js",
+    "db:reset": "node bin/resetdb.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -19,6 +16,8 @@
     "express": "^4.16.4",
     "knex": "^1.0.3",
     "nodemon": "^1.18.7",
-    "pg": "^8.7.3"
+    "pg": "^8.5.0",
+    "pg-native": "^3.0.0",
+    "chalk": "^2.4.2"
   }
 }
