--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-hook-form": "^7.27.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "2.1.8",
     "semantic-ui-css": "^2.4.1",
