--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "sass": "^1.49.7",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.9.0",
+    "eslint-plugin-react": "^7.28.0"
   }
 }
