--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^16.0.1",
     "express": "^4.16.4",
     "nodemon": "^1.18.7",
+    "pg": "^8.7.3",
     "sass": "^1.51.0"
   }
 }
