--- a/react-client/package.json
+++ b/react-client/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@fontsource/roboto": "^4.5.5",
+    "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
     "@mui/styled-engine-sc": "^5.7.0",
     "axios": "^0.18.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-scripts": "2.1.8",
     "styled-components": "^5.3.5"
   },
