--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "nodemon": "^1.18.7"
+    "knex": "^2.0.0",
+    "nodemon": "^1.18.7",
+    "pg": "^8.7.3"
   }
 }
