--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^16.0.1",
     "express": "^4.16.4",
     "knex": "^2.0.0",
     "nodemon": "^1.18.7",
