--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.7.0",
     "@mui/styled-engine-sc": "^5.7.0",
     "axios": "^0.18.1",
+    "node-sass": "^4.14.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "2.1.8",
