--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "nodemon": "^1.18.7",
     "pg": "^8.7.3",
-    "sass": "^1.51.0"
+    "sass": "^1.51.0",
+    "socket.io": "^4.5.0"
   }
 }
