--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.0",
+    "react-card-flip": "^1.1.5",
     "react-dom": "^17.0.0",
     "react-scripts": "2.1.8",
     "sass": "^1.51.0",
