--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,7 @@
 CHOKIDAR_USEPOLLING=true
+
 SKIP_PREFLIGHT_CHECK=true
+
 REACT_APP_RapidAPI_Key=2f8033e889mshb4c8ca74d55c336p1769fcjsna7c55af16b77
+
+REACT_APP_GEOCODING_KEY=f3b2f4dd6dmsh2980ca4a7a26448p15bf8ajsnd1da42bd6957
