--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -9,9 +9,12 @@
     "go": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "body-parser": "^1.18.3",
+    "dotenv": "^16.0.1",
     "express": "^4.16.4",
-    "nodemon": "^1.18.7",
+    "nodemon": "^1.19.4",
+    "qs": "^6.10.5",
     "socket.io": "2.3.0"
   }
 }
