--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^16.0.1",
     "express": "^4.16.4",
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.18.7",
+    "pg": "^8.7.3"
   }
 }
