--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.16.4",
     "nodemon": "^1.18.7",
