--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "^5.0.1",
+    "react-tinder-card": "^1.4.5",
     "tailwindcss": "^3.1.8"
   },
   "scripts": {
