--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.1",
+    "bootstrap": "^5.2.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "2.1.8",
@@ -25,5 +28,8 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "devDependencies": {
+    "sass": "^1.54.3"
+  }
 }
