--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "axios": "^0.18.1",
+    "emoji-picker-react": "^3.6.1",
     "moment": "^2.29.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
