--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "nodemon": "^1.19.4",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "socket.io": "^4.5.1"
   }
 }
