--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-tinder-card": "^1.4.5",
+    "socket.io-client": "^4.5.1",
     "tailwindcss": "^3.1.8"
   },
   "scripts": {
