--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.1",
     "emoji-picker-react": "^3.6.1",
     "moment": "^2.29.4",
+    "multi-range-slider-react": "^1.0.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^6.3.0",
