--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "axios": "^0.27.2",
+    "deps": "^1.0.0",
+    "legacy": "^0.0.3",
+    "peer": "^0.6.1",
     "react-router": "^6.3.0"
   }
 }
