--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.3",
     "@mui/styled-engine-sc": "^5.10.3",
+    "antd": "^4.23.1",
     "axios": "^0.18.1",
     "bootstrap": "^5.2.0",
     "react": "^16.8.6",
