--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.1",
+    "bootstrap": "^5.1.3",
+    "node-sass": "^7.0.3",
     "react": "^16.8.6",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
   },
