--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "axios": "^0.18.1",
     "bootstrap": "^5.1.3",
-    "node-sass": "^7.0.3",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^16.8.6",
@@ -26,5 +26,6 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "devDependencies": {}
 }
