--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.1",
+    "bootstrap": "^5.2.1",
     "react": "^16.8.6",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "sass": "^1.54.9"
   },
   "scripts": {
     "start": "react-scripts start",
