--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -6,13 +6,19 @@
   "author": "garrettgsb",
   "license": "MIT",
   "scripts": {
-    "go": "nodemon server.js"
+    "start": "node server",
+    "dev": "nodemon server --ignore client"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.16.4",
-    "nodemon": "^1.18.7",
+    "morgan": "^1.10.0",
     "pg": "^8.8.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
