--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.1",
     "bootstrap": "^5.1.3",
+    "http-proxy-middleware": "^2.0.6",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-bootstrap": "^2.5.0",
@@ -27,6 +28,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "proxy": "http://localhost:8080"
+  ]
 }
