--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.1",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.1",
+    "firebase": "^9.10.0",
     "http-proxy-middleware": "^2.0.6",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
