--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.35",
+    "@react-google-maps/api": "^2.13.1",
     "axios": "^0.18.1",
     "bootstrap": "^5.2.1",
+    "dotenv": "^16.0.2",
     "node-sass": "^7.0.3",
     "react": "^16.8.6",
     "react-bootstrap": "^2.5.0",
