--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.18.1",
     "bootstrap": "^5.2.1",
     "dotenv": "^16.0.2",
+    "google-map-react": "^2.2.0",
     "node-sass": "^7.0.3",
     "react": "^16.8.6",
     "react-bootstrap": "^2.5.0",
