--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.16.4",
     "nodemon": "^1.18.7",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "twilio": "^3.82.1"
   }
 }
