--- a/react-front-end/.env
+++ b/react-front-end/.env
@@ -1,6 +1,7 @@
 CHOKIDAR_USEPOLLING=true
+DB_USER=jakobbollman
 DB_HOST=localhost
-DB_USER=labber
-DB_PASS=labber
+DB_PASS=1234
 DB_NAME=curtaindraw
-DB_PORT=8080
+DB_PORT=5000
+PORT=3000
