--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "nodemon": "^1.18.7",
     "pg": "^8.8.0",
