--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -9,7 +9,10 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.10.15",
     "@mui/material": "^5.10.15",
+    "@mui/x-date-pickers": "^5.0.9",
     "axios": "^0.18.1",
+    "dayjs": "^1.11.6",
+    "moment": "^2.29.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^6.4.3",
@@ -21,7 +24,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  
   "eslintConfig": {
     "extends": "react-app"
   },
