--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -9,7 +9,10 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.10.15",
     "@mui/material": "^5.10.16",
+    "@mui/x-date-pickers": "^5.0.9",
     "axios": "^0.18.1",
+    "date-fns": "^2.29.3",
+    "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.4.3",
