--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -11,11 +11,15 @@
     "@mui/icons-material": "^5.10.15",
     "@mui/material": "^5.10.15",
     "@mui/x-date-pickers": "^5.0.9",
+    "@nivo/calendar": "^0.80.0",
+    "@nivo/colors": "^0.80.0",
     "axios": "^0.18.1",
+    "date-fns": "^2.29.3",
     "dayjs": "^1.11.6",
+    "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "2.1.8"
   },
