--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -9,9 +9,10 @@
     "go": "nodemon server.js",
     "db:migrate": "knex migrate:latest",
     "db:seed": "knex seed:run"
-
   },
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.18.3",
     "dotenv": "^16.1.0",
     "express": "^4.16.4",
