--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -23,5 +23,8 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "devDependencies": {
+    "react-router-dom": "^6.16.0"
+  }
 }
