--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.1",
+    "bootstrap": "^5.3.2",
     "react": "^16.8.6",
     "react-scripts": "2.1.8"
   },
