--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-session": "^2.0.0",
+    "dotenv": "^16.3.1",
     "express": "^4.16.4",
-    "nodemon": "^1.18.7"
+    "knex": "^2.5.1",
+    "nodemon": "^1.18.7",
+    "pg": "^8.11.3"
   }
 }
