--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.1",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "react": "^16.8.6",
     "react-scripts": "2.1.8"
   },
