--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -6,8 +6,10 @@
     "axios": "^0.18.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "movie-trailer": "^3.1.0",
     "react": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-youtube": "^10.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
