--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "axios": "^0.18.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
