--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^16.3.1",
     "express": "^4.16.4",
-    "nodemon": "^1.18.7"
+    "knex": "^3.0.1",
+    "nodemon": "^1.18.7",
+    "pg": "^8.11.3"
   }
 }
