--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -9,9 +9,10 @@
     "go": "nodemon server.js"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.16.4",
+    "express": "^4.18.2",
     "knex": "^3.0.1",
     "nodemon": "^1.18.7",
     "pg": "^8.11.3"
