--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -16,5 +16,8 @@
     "knex": "^3.0.1",
     "nodemon": "^1.18.7",
     "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "@babel/preset-react": "^7.22.15"
   }
 }
