--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -26,6 +26,8 @@
   ],
   "proxy": "http://localhost:8080",
   "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/preset-react": "^7.22.15",
     "@testing-library/dom": "^5.6.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^8.0.9",
