--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -6,7 +6,8 @@
   "author": "garrettgsb",
   "license": "MIT",
   "scripts": {
-    "go": "nodemon server.js"
+    "go": "nodemon server.js",
+    "reset-db": "node reset-database.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
