--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -19,7 +19,8 @@
     "fs": "^0.0.1-security",
     "knex": "^3.0.1",
     "nodemon": "^1.18.7",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "whatwg-fetch": "^3.6.19"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.22.15"
