--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^0.18.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
