--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@csstools/normalize.css": "^12.0.0",
     "animate.css": "^4.1.1",
     "axios": "^0.18.1",
+    "postcss-normalize": "^10.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^6.17.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "sanitize.css": "^13.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
