--- a/vite-express-project/package.json
+++ b/vite-express-project/package.json
@@ -8,16 +8,19 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.38.4",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "react-dom": "^18.2.0",
+    "morgan": "^1.10.0",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "vite-express": "*"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.0.1",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.22",
     "vite": "^4.0.4"
   }
 }
