--- a/vite-express-project/package.json
+++ b/vite-express-project/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "react-dom": "^18.2.0",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "vite-express": "*"
   },
   "devDependencies": {
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.0.1",
     "nodemon": "^2.0.20",
+    "tailwindcss": "^3.3.5",
     "vite": "^4.0.4"
   }
 }
