--- a/vite-express-project/package.json
+++ b/vite-express-project/package.json
@@ -10,11 +10,9 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.38.4",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-
-
     "morgan": "^1.10.0",
-
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite-express": "*"
@@ -23,12 +21,8 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.0.1",
-
     "nodemon": "^2.0.20",
     "tailwindcss": "^3.3.5",
-
- 
-
     "vite": "^4.0.4"
   }
 }
