--- a/vite-express-project/package.json
+++ b/vite-express-project/package.json
@@ -15,6 +15,7 @@
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.19.0",
     "vite-express": "*"
   },
   "devDependencies": {
