--- a/vite-express-project/package.json
+++ b/vite-express-project/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@esbuild/darwin-x64": "^0.19.5",
+    "@headlessui/react": "^1.7.17",
     "@supabase/supabase-js": "^2.38.4",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
